# python-ovs-vsctl

./: .gitignore  .pylintrc  .travis.yml  README.md  run_tests.sh  setup.cfg  setup.py  tox.ini
doc/: Makefile
doc/source/: api_reference.rst  conf.py  getting_started.rst  index.rst
ovs_vsctl/: __init__.py  exception.py  parser.py  utils.py  vsctl.py
tests/: __init__.py  test_api.py  test_parser.py  test_utils.py  test_vsctl.py
tools/: pip-requires
