[metadata]
name = python-ovs-vsctl
summary = Slightly ovs-vsctl wrapper for Python
license = Apache License 2.0
author = Iwase Yusuke
home-page = https://github.com/iwaseyusuke/python-ovs-vsctl
description-file = README.md
platform = any
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Networking
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
keywords =
    openvswitch
    ovs
    OVSDB

[files]
packages =
    ovs_vsctl

